# microlog

./: .gitignore  LICENSE  MANIFEST.in  README.md  _config.yml  copy.sh  dashboard.py  example.py  index.html  js.py  logs  microlog.css  microlog.toml  pyodide.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  t.txt  treemap.ipynb  treemap.py
.github/workflows/: python-publish.yml  test.yml
Microlog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashboard/: canvas.py  colors.py  config.py  design.py  dialog.py  index.html  main.py  markdown.py  profiler.py  tips.py  treeview.py
dashboard/views/: __init__.py  call.py  config.py  marker.py  span.py  status.py  timeline.py
docs/: dashboard  index.html  microlog
examples/: binaryTrees.py  books.json  bookstore.py  child.py  dataframes.py  example.py  files.py  go.py  hello.py  helloworld.py  index.md  memory.py  modules.py  mp.py  parent.py  pdf.py  polars_mapping_example.py  run_all.sh  runall.sh  sklearn_classification.py  startstop.py  threads.py  treemap.ipynb  work.py
microlog/: __init__.py  api.py  collector.py  config.py  drive.py  events.py  explain.py  log.py  logparser.py  marker.py  memory.py  meta.py  microlog.py  models.py  profiler.py  run.sh  server.py  settings.py  show.py  sitecustomize.py  span.py  stack.py  status.py  symbols.py  tracer.py
microlog/dashboard/: __init__.py  canvas.py  colors.py  dialog.py
microlog/dashboard/views/: __init__.py  call.py  marker.py  span.py  status.py  timeline.py
microlog/threads/: __init__.py  collector.py  status.py  tracer.py
src/microlog/: __init__.py  __main__.py  analyse.py  api.py  config.py  index.html  microlog.css  microlog.js  microlog.toml  models.py  server.py  tracer.py
src/microlog/dashboard/: __init__.py  canvas.py  colors.py  config.py  design.py  dialog.py  flamegraph.py  main.py  markdown.py  treeview.py  ui.py
src/microlog/ltk/: widgets.py
tests/: test_call_view.py  test_canvas.py  test_events.py  test_log.py  test_marker_view.py  test_print.py  test_status.py  test_status_view.py  test_symbols.py  test_tracer.py
tests/microlog/: events.py  status.py  symbols.py  test_analyse.py  test_server.py  test_stack.py  tracer.py
tests/views/: test_call.py  test_marker.py  test_status.py
zip/Treemap-Jupyter-Notebook/: 2023_07_31_11_16_42
zip/examples-binaryTrees/: 2023_07_26_14_11_18  2023_07_31_11_15_56
zip/examples-bookstore/: 2023_07_26_14_11_15  2023_07_31_11_15_57
zip/examples-dataframes/: 2023_07_26_14_11_16
zip/examples-example/: 2023_07_26_14_11_26  2023_07_31_11_16_05
zip/examples-files/: 2023_07_26_14_11_17  2023_07_31_11_15_59
zip/examples-go/: 2023_07_26_11_49_54  2023_07_26_14_11_42  2023_07_31_11_16_11
zip/examples-helloworld/: 2023_07_26_14_11_14
zip/examples-memory/: 2023_07_26_14_11_38  2023_07_31_11_16_19
zip/examples-modules/: 2023_07_26_14_11_17  2023_07_31_11_15_54
zip/examples-startstop/: 2023_07_26_14_11_12
zip/examples-threads/: 2023_07_26_14_11_19
zip/examples.startstop-1/: 2023_07_26_14_11_13
zip/examples.startstop-2/: 2023_07_26_14_11_14
zip/setup/: 2023_07_31_11_17_08
(+10 files in other folders)
