[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "micrologai"
version = "1.4.4"
description = "Microlog - A lightweight logging and tracing library for Python applications"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "s3fs",
  "psutil",
  "zstd",
  "openai",
  "pyscript-ltk",
  "networkx>=3.5",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
  "twine>=6.2.0",
  "build>=1.3.0",
]

[dependency-groups]
test = [
  "pandas==2.3.1",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "pytest-sugar==1.0.0",
  "pytest-xdist==3.8.0",
  "pytest-randomly==3.16.0",
  "pytest-subtests",
  "pytest-random-order",
  "pytest-repeat",
  "pytest-flakefinder",
  "pytest-timeout",
  "setuptools==80.9.0",
  "testfixtures==9.1.0",
  "unittest-parametrize==1.6.0",
]
dev = [
  "pyright>=1.1.404",
  "pytest>=8.4.1",
  "pytest-timeout>=2.4.0",
  "types-psutil>=7.0.0.20250822",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microlog"]
artifacts = [
  "microlog/images/**/*"
]
